--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrations": "npx prisma migrate dev --name update_user"
   },
   "dependencies": {
     "@lit-labs/react": "^2.1.3",
     "@prisma/client": "^6.5.0",
     "lit": "^3.2.1",
     "next": "15.2.4",
+    "next-auth": "^4.24.11",
     "prettier": "^3.5.3",
     "prisma": "^6.5.0",
     "react": "^19.0.0",
