--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "generate": "prisma generate",
     "migrations": "npx prisma migrate dev --name update_user"
   },
   "dependencies": {
