--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,13 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# devtools
-.idea
-.idea/*
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+/.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+.eslintcache
